--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(ray_tracing_renderer)
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
-add_executable(ray_tracing_renderer src/main.cpp src/application/Application.cpp src/application/Application.h src/Image.cpp src/Image.h)
+add_executable(ray_tracing_renderer src/main.cpp src/application/Application.cpp src/application/Application.h src/image/Image.cpp src/image/Image.h src/renderer/Renderer.cpp src/renderer/Renderer.h src/image/Color.cpp src/image/Color.h)
 target_link_libraries(ray_tracing_renderer ${SDL2_LIBRARIES})
 
